--- a/style.css
+++ b/style.css
@@ -18,58 +18,83 @@ body {
 
 main {
   background-color: white;
-  border-radius: 20px;
-  margin-bottom: 30px;
-  height: 30vh;
+  border-radius:20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.7rem;
+  margin: auto;
+  padding: 40px;
+  height: 450px;
+  width: 450px;
+  background-image: url(images/bg-pattern-card.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: 500px;
 }
 
-/* Card styling */
+hr {
+  margin: 20px;
+  width: 450px;
+}
+
+.imgCard {
+  position: relative;
+  top: 50px;
+  margin: 60px;
+  border-radius:100%;
+  border: 6px solid white;
+  
+}
+
+.userName {
+  font-weight: 700;
+  font-size: 1.6rem;
+}
+
 .topEl {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
-
 }
 
-.imgCard{
-  border-radius: 200px;
-  position: absolute;
-  bottom: 750px;
-  border: 6px solid white;
-}
-
-.topEl h1 {
-  font-size: 20px;
-  margin-top: 60px;
-}
-
-h1{
-  font-size: 20px;
-}
-
-.followCount{
-  display: flex; 
-  align-items: center;
+.followerStatus {
+  display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: row;
 }
 
-.imgCard2 {
-  border-radius: 20px 20px 0px 0px;
+.followCount {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
+p{
+  font-size: 1.1rem;
+}
 
+li{
+  list-style-type: none;
+  padding: 20px;
+  font-size: 0.8rem;
+}
 
-span {
+li > p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  color: hsl(0, 0%, 59%);
+}
+
+span{
+  color: hsl(0, 0%, 59%);
+  opacity: 30%;
+  font-size: medium;
   font-weight: 400;
-  opacity: 20%;
-}
-
-/* Footer Elements */
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
 }
